# libibrato

./: .gitignore  .travis.yml  ChangeLog  Makefile.am  README  README.md  configure.ac
include/: Makefile.am
include/librato/: metrics.h
libibrato/: Makefile.am  libibrato.pc.in  metrics.c
tests/: .gitignore  Makefile.am  lm_new.c
